--- a/assets/style.css
+++ b/assets/style.css
@@ -123,3 +123,16 @@ body {
 .Select-option.is-focused {
     background-color: #f0f0f0 !important;
 }
+
+/* Allow the graph to scale responsively */
+.main-content {
+    flex-grow: 1;
+    padding: 1rem;
+}
+
+#choropleth-map {
+    width: 100%;
+    height: 100%;
+    max-width: 1600px;
+    margin: 0 auto;
+}
