--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -135,4 +137,11 @@ body {
     height: 100%;
     max-width: 1600px;
     margin: 0 auto;
+}
+
+body {
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    background-color: #33c8ff;
+    color: white;
 }
